# CopyTalker

./: AGENTS.md  INSTALL.md  MANIFEST.in  QUICKSTART.md  README.md  README_CN.md  app.py  check_tts.py  errors  fifth.py  first.py  forth.py  install.ps1  install.sh  kokoro_model_dict.json  language_model_dict.json  pre_download_models.py  pyproject.toml  requirements.txt  second.py  test.py  third.py  upload_pypi.bat  upload_pypi.sh
images/: copytalker_help.txt
src/copytalker/: __init__.py  __main__.py  api.py  tools.py
src/copytalker/audio/: __init__.py  capture.py  playback.py  recorder.py
src/copytalker/cli/: __init__.py  main.py
src/copytalker/core/: __init__.py  config.py  config.py.part1  constants.py  exceptions.py  history.py  i18n.py  pipeline.py  types.py
src/copytalker/gui/: __init__.py  app.py  main_window.py  main_window.py.bak  state.py  widgets.py
src/copytalker/gui/controllers/: __init__.py  model_controller.py  pipeline_controller.py
src/copytalker/gui/qt/: __init__.py  app.py  state.py
src/copytalker/gui/qt/controllers/: __init__.py  model_controller.py  pipeline_controller.py
src/copytalker/gui/qt/views/: __init__.py  conversation.py  dialogs.py  settings.py
src/copytalker/gui/qt/widgets/: __init__.py  common.py  ptt_bar.py
src/copytalker/gui/views/: __init__.py  conversation.py  settings.py
src/copytalker/gui/widgets/: __init__.py  chat_bubble.py  common.py  ptt_bar.py
src/copytalker/speech/: __init__.py  recognizer.py
src/copytalker/translation/: __init__.py  helsinki.py  nllb.py  translator.py
src/copytalker/tts/: __init__.py  base.py  edge.py  fish_speech.py  indextts.py  kokoro.py  pyttsx3_engine.py
src/copytalker/utils/: __init__.py  model_cache.py
tests/: conftest.py  test_all.py  test_quick.py  test_unified_api.py
tests/integration/: test_pipeline.py
tests/unit/: test_audio.py  test_config.py  test_constants.py  test_recognizer.py  test_translator.py  test_tts.py
